Bugfix/primary care  styles + other pre-launch fixes (#289)
* UWM-CMS: Fix condition spotlight height on small devices

* UWM-CMS: Add proper hover to ghost buttons

* UWM-CMS: Solve mystery margin rule

* UWM-CMS: Improve toggle functionality

* UWM-CMS: Remove text decoration on hover

* UWM-CMS: Improve tabs appearance on small screens

* UWM-CMS: Remove small line that would appear below triangle on small hi-res screens

* UWM-CMS: Add fill to accelerate block button

* UWM-CMS: Add fill to accelerate block button

* UWM-CMS: Adjust text shadows, remove bold from homepage buttons

* UWM-CMS: Spot stye fixes

* UWM-CMS: Fix accidental overflow

* UWM-CMS: Fix virtual clinic margins

--- a/docroot/themes/custom/uwmed/src/components/blocks/_blocks.scss
+++ b/docroot/themes/custom/uwmed/src/components/blocks/_blocks.scss
@@ -101,9 +101,35 @@ aside section.block {
       &::before {
         background-position: left 0;
       }
+    }
+
+    .btn-default {
+      z-index: 1;
+
       &:hover {
-        background-color: white;
         color: $text-color;
+      }
+
+      &::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        transform: scaleX(0);
+        transform-origin: 0 50%;
+        transition-property: transform;
+        transition-duration: 0.7s;
+        transition-timing-function: ease-out;
+        z-index: -1;
+        background-color: white;
+      }
+
+      &:hover {
+        &::after {
+          transform: scaleX(1);
+        }
       }
     }
   }
