--- a/docroot/themes/custom/uwmed/src/scss/_homepage.scss
+++ b/docroot/themes/custom/uwmed/src/scss/_homepage.scss
@@ -162,6 +162,7 @@
 
   .homepage-sections {
     position: relative;
+    overflow: hidden;
   }
 
   .homepage-section-background-lg {
@@ -283,12 +284,21 @@
       &:nth-child(even) {
         .homepage-section__background {
           @include angled-edge('inside bottom', 'upper right', #fff, 50);
+          &::after {
+            width: 105%;
+            margin-bottom: -1px;
+          }
         }
       }
       &:nth-child(odd) {
         .homepage-section__background {
           @include angled-edge('inside bottom', 'upper left', #fff, 50);
+          &::after {
+            width: 105%;
+            margin-bottom: -1px;
+          }
         }
+
       }
     }
   }
@@ -327,7 +337,7 @@
 
     .h3 {
       text-transform: uppercase;
-      text-shadow: 0px 3px 6px rgba(0,0,0,53);
+      text-shadow: 0px 3px 6px rgba(0,0,0,.53);
       color: white;
       letter-spacing: .05em;
       margin-bottom: 6px;
@@ -440,7 +450,6 @@
   .homepage-section__link {
     text-transform: uppercase;
     text-decoration: none;
-    font-weight: 600;
     font-family: $headings-font-family;
     font-size: $font-size-h3;
     transition-property: color;
@@ -530,7 +539,7 @@
     .section-story__play-button-text {
       color: white;
       font-weight: 600;
-      text-shadow: 0px 3px 6px rgba(0,0,0,53);;
+      text-shadow: 0px 3px 6px rgba(0,0,0,.53);
     }
 
     .fa-stack {
